--- a/about.html
+++ b/about.html
@@ -33,37 +33,37 @@
       <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
     </div>
 
-  <div class = "first_container">
-    <div class = "strategy">
+  <div class = "body_container">
+    <div class = "main_content">
       <img src="img/about-plan.png" alt="strategy">
       <h1>Strategy</h1>
       <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      <a class="learn_more" href = "#">Learn More</a>
+      <a href = "#">Learn More</a>
     </div>
 
-    <div class = "how_we_work">
+    <div class = "main_content">
       <img src="img/about-working.png" alt="strategy">
       <h1>How We Work</h1>
       <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-      <a class="learn_more" href = "#">Learn More</a>
+      <a href = "#">Learn More</a>
     </div>
   </div>
 
 
 
-    <div class = "second_container">
-      <div class = "places_we_work">
+    <div class = "body_container">
+      <div class = "main_content">
         <img src="img/about-office.png" alt="strategy">
         <h1>Places We Work</h1>
         <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-        <a class="learn_more" href = "#">Learn More</a>
+        <a href = "#">Learn More</a>
       </div>
 
-        <div class = "collaboration">
+        <div class = "main_content">
           <img src="img/about-meeting.png" alt="strategy">
           <h1>Collaboration</h1>
           <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-          <a class="learn_more" href = "#">Learn More</a>
+          <a href = "#">Learn More</a>
         </div>
     </div>
     
